--- a/index.html
+++ b/index.html
@@ -3,21 +3,75 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Proletarian!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <title>Proletarian</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+	
+	<!-- 
+		https://unpkg.com/bootstrap/dist/css/bootstrap.min.css 
+		https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css
+	-->
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap-vue.css"/>
+	
+	<!-- 
+		https://unpkg.com/vue@2.5.13/dist/vue.js
+		https://unpkg.com/babel-polyfill@latest/dist/polyfill.min.js
+		https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js
+		https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.1/ace.js
+	-->
+	<script src="js/vue.js"></script>
+    <script src="js/polyfill.min.js"></script>
+    <script src="js/bootstrap-vue.js"></script>
+	
+	<script src="js/ace.js"></script>
+	
+	<style type="text/css" media="screen">
+		#editor { 
+			height: 300px;
+		}
+	</style>
   </head>
   <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        Hello Proletarian
-      </h1>
-      <p class="subtitle">
-        Initial version of <strong>Proletarian</strong>!
-      </p>
-	  <p>Based on template: https://bulma.io/documentation/overview/start/</p>
-    </div>
-  </section>
+	<div id="app">
+		<b-card no-body>
+		  <b-tabs pills card vertical>
+			<b-tab title="Tab 1" active>
+				<b-card no-body>
+				  <b-tabs card>
+					<b-tab title="Tab 1" active>
+					  <div class="span9" style="position:relative">
+						  <div id="editor">function foo(items) {
+								var x = "All this is syntax highlighted";
+								return x;
+							}</div>
+					  </div>
+					</b-tab>
+					<b-tab title="Tab 2">
+					  Tab Contents 2
+					</b-tab>
+				  </b-tabs>
+				</b-card>
+			</b-tab>
+			<b-tab title="Tab 2">
+			  Tab Contents 2
+			</b-tab>
+			<b-tab title="Tab 3">
+			  Tab Contents 3
+			</b-tab>
+		  </b-tabs>
+		</b-card>
+	</div>
+	<script>
+		new Vue({
+			el: '#app',
+			data: {
+			message: 'Hello Vue.js!'
+			}
+		})
+		
+		var editor = ace.edit("editor");
+		editor.setTheme("ace/theme/monokai");
+		editor.session.setMode("ace/mode/javascript");
+	</script>
   </body>
 </html>
